<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView_event"
    tools:context=".ui.event.EventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Name: "
                    android:layout_weight="0.6"
                    android:textColor="@color/grey"
                    android:textSize="25sp">
                </TextView>

                <EditText
                    android:id="@+id/title"
                    android:layout_height="wrap_content"
                    android:hint="Title"
                    android:inputType="text"
                    android:layout_weight="0.4"
                    android:textSize="20sp"
                    android:background="@android:color/transparent"
                    android:textAlignment="center"/>

            </TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Description: "
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:layout_width="match_parent">
            </TextView>

            <EditText
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:hint="description"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"
                android:textAlignment="center"/>

            <DatePicker
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:endYear="2100"
                android:startYear="2020"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_marginTop="20dp">
            </DatePicker>


            <ch.epfl.sdp.ui.event.DelayAutoCompleteTextView
                android:id="@+id/geo_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:imeOptions="actionSearch"
                android:inputType="textCapSentences"
                android:background="@color/white"
                android:hint="address"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:dropDownWidth="fill_parent"
                />

           <ImageView
                android:id="@+id/geo_autocomplete_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_remove"
                android:contentDescription="delete button"
                android:layout_gravity="center_vertical|end"
                android:visibility="gone"
                android:layout_marginEnd="12dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="414dp"
                android:src="@drawable/add_image"
                android:layout_marginTop="20dp"
                android:background="@color/grey"
                android:scaleType="centerCrop">
            </ImageView>

            <Button
                android:id="@+id/addImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="80dp"
                android:text="+"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="16dp"
                android:src="@drawable/check"
                app:layout_anchorGravity="bottom|center" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>