...
            android:text="Map" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">
...
