<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cardView_event"
    tools:context=".ui.event.EventFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

...
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:src="@drawable/check"
            android:id="@id/back_button"
            app:layout_anchorGravity="bottom|center" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sharingButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
