...
                android:gravity="center"
                android:text="DENY"
                android:textSize="50sp"
                android:alpha="0"
                android:textColor="@color/grey"
                android:background="#F5F5F5"
                android:id="@+id/deny_indicator">
            </TextView>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

...
